# ai-assistant-app

app/backend/: .gitignore  demo.py  main.py  python_test.ipynb
app/backend/api/: auth_backend.py  calendar_backend.py
app/backend/services/: auth_service.py  session_service.py
backend/: .gitignore  example_io.txt  pyproject.toml  todo.txt
backend/app/: config.py  main.py
backend/app/api/: assistant_backend.py  auth_backend.py  calendar_backend.py
backend/app/services/: assistant_service.py  assistant_tools.py  auth_service.py  calendar_service.py  session_service.py
backend/database/: .gitignore  example_history.json  system_prompt.md
frontend/: frontend.txt
